# RAG4Ghart

./: .gitignore  count.py  main.py  package-lock.json  pyproject.toml
Data-Processing/: change-line.py
Data-Processing/chart_editor_samples/: README.md  area_README.md  area_instructions.json  area_sample.csv  bar_README.md  bar_instructions.json  bar_sample.csv  box_README.md  box_instructions.json  box_sample.csv  bubble_README.md  bubble_instructions.json  bubble_sample.csv  funnel_README.md  funnel_instructions.json  funnel_sample.csv  heatmap_README.md  heatmap_instructions.json  heatmap_sample.csv  histogram_README.md  histogram_instructions.json  histogram_sample.csv  line_README.md  line_instructions.json  pie_README.md  pie_instructions.json  pie_sample.csv  radar_README.md  radar_instructions.json  radar_sample.csv  scatter_README.md  scatter_instructions.json  scatter_sample.csv  stacked_area_README.md  stacked_area_instructions.json  stacked_area_sample.csv  stacked_bar_README.md  stacked_bar_instructions.json  stacked_bar_sample.csv
Dataset-ZXQ/Parallel/: Parallel.py  Parallel_QA.py
Dataset-ZXQ/area/: area.py  area_QA.py
Dataset-ZXQ/bar/: Simple_QA_bar.py
Dataset-ZXQ/box/: simple_QA_box.py
Dataset-ZXQ/bubble/: bubble.py  bubble_QA.py  bubble_vis.py
Dataset-ZXQ/fill_bubble/: fill_bubble.py  fill_bubble_QA.py  fill_bubble_vis.py
Dataset-ZXQ/heatmap/: heatmap.py  heatmap_QA.py  (+1 more)
Dense-Retrieval/: download_model.py  evaluate.py  query.py
Generate-Abstract/: Data-Clean.py  Data-count.py  Delete-Data.py  Generate-Abstract.py  Generate-URL.py  Generate-one.py  muti-thread.py
Reverse-Index/: Creat-Index-TF-IDF.py  Creat-Index.py  Creat.py  Recommend-Chart-TF-IDF.py  Recommend-Chart.py  Recommend.py  Tokenizer.py  txt_index.json  word2chart_index.json
docker/: docker-compose.yml
script/: bar.py  box.py  create_db.py  create_schema.py  download_model.py  evaluate.py  index_data.py  insert_data.py  load_data.py  query.py
test/: count.py  db.ipynb  embedding.ipynb  embedding.py  load_data.ipynb  longer_siglip.py  query.ipynb  read_parquet.py  split_data.py  test.py
(+7205 files in other folders)
